src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    OFFSET

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statement
Rule 3     statements -> statement statements
Rule 4     statement -> table
Rule 5     statement -> assignment
Rule 6     statement -> comment
Rule 7     statement -> newline
Rule 8     newline -> NEWLINE
Rule 9     comment -> COMMENT NEWLINE
Rule 10    table -> header1
Rule 11    table -> header2
Rule 12    header1 -> LEFTSQUAREBRACKET name RIGHTSQUAREBRACKET
Rule 13    header1 -> LEFTSQUAREBRACKET name RIGHTSQUAREBRACKET NEWLINE
Rule 14    header1 -> LEFTSQUAREBRACKET name RIGHTSQUAREBRACKET COMMENT NEWLINE
Rule 15    header2 -> LEFTSQUAREBRACKET LEFTSQUAREBRACKET name RIGHTSQUAREBRACKET RIGHTSQUAREBRACKET
Rule 16    header2 -> LEFTSQUAREBRACKET LEFTSQUAREBRACKET name RIGHTSQUAREBRACKET RIGHTSQUAREBRACKET NEWLINE
Rule 17    header2 -> LEFTSQUAREBRACKET LEFTSQUAREBRACKET name RIGHTSQUAREBRACKET RIGHTSQUAREBRACKET COMMENT NEWLINE
Rule 18    assignment -> name EQUAL elemento
Rule 19    assignment -> name EQUAL elemento NEWLINE
Rule 20    assignment_object -> name EQUAL elemento
Rule 21    name -> elementoVar
Rule 22    name -> elementoVar name2
Rule 23    name2 -> DOT elementoVar
Rule 24    name2 -> DOT elementoVar name2
Rule 25    elementoVar -> VAR
Rule 26    elementoVar -> string
Rule 27    elementoVar -> int
Rule 28    lista -> LEFTSQUAREBRACKET RIGHTSQUAREBRACKET
Rule 29    lista -> LEFTSQUAREBRACKET NEWLINE lista2 RIGHTSQUAREBRACKET
Rule 30    lista -> LEFTSQUAREBRACKET lista2 RIGHTSQUAREBRACKET
Rule 31    lista2 -> conteudo_lista
Rule 32    lista2 -> conteudo_lista COMMA
Rule 33    conteudo_lista -> elemento
Rule 34    conteudo_lista -> elemento NEWLINE
Rule 35    conteudo_lista -> elemento COMMA conteudo_lista
Rule 36    conteudo_lista -> elemento COMMA NEWLINE conteudo_lista
Rule 37    object -> LEFTBRACKET RIGHTBRACKET
Rule 38    object -> LEFTBRACKET conteudo_object RIGHTBRACKET
Rule 39    conteudo_object -> assignment_object
Rule 40    conteudo_object -> assignment_object COMMA conteudo_object
Rule 41    elemento -> int
Rule 42    elemento -> float
Rule 43    elemento -> inf
Rule 44    elemento -> nan
Rule 45    elemento -> hexadecimal
Rule 46    elemento -> binary
Rule 47    elemento -> octal
Rule 48    elemento -> string
Rule 49    elemento -> mstring
Rule 50    elemento -> lstring
Rule 51    elemento -> mlstring
Rule 52    elemento -> boolean
Rule 53    elemento -> date
Rule 54    elemento -> time
Rule 55    elemento -> datetime
Rule 56    elemento -> offset_datetime
Rule 57    elemento -> lista
Rule 58    elemento -> object
Rule 59    mstring -> MSTRING
Rule 60    mlstring -> MLSTRING
Rule 61    string -> STRING
Rule 62    lstring -> LITERALSTRING
Rule 63    int -> INT
Rule 64    float -> FLOAT
Rule 65    inf -> INF
Rule 66    nan -> NAN
Rule 67    hexadecimal -> HEXADECIMAL
Rule 68    binary -> BINARY
Rule 69    octal -> OCTAL
Rule 70    boolean -> BOOLEAN
Rule 71    date -> DATE
Rule 72    time -> TIME
Rule 73    datetime -> DATETIME
Rule 74    offset_datetime -> OFFSETDATETIME

Terminals, with rules where they appear

BINARY               : 68
BOOLEAN              : 70
COMMA                : 32 35 36 40
COMMENT              : 9 14 17
DATE                 : 71
DATETIME             : 73
DOT                  : 23 24
EQUAL                : 18 19 20
FLOAT                : 64
HEXADECIMAL          : 67
INF                  : 65
INT                  : 63
LEFTBRACKET          : 37 38
LEFTSQUAREBRACKET    : 12 13 14 15 15 16 16 17 17 28 29 30
LITERALSTRING        : 62
MLSTRING             : 60
MSTRING              : 59
NAN                  : 66
NEWLINE              : 8 9 13 14 16 17 19 29 34 36
OCTAL                : 69
OFFSET               : 
OFFSETDATETIME       : 74
RIGHTBRACKET         : 37 38
RIGHTSQUAREBRACKET   : 12 13 14 15 15 16 16 17 17 28 29 30
STRING               : 61
TIME                 : 72
VAR                  : 25
error                : 

Nonterminals, with rules where they appear

assignment           : 5
assignment_object    : 39 40
binary               : 46
boolean              : 52
comment              : 6
conteudo_lista       : 31 32 35 36
conteudo_object      : 38 40
date                 : 53
datetime             : 55
elemento             : 18 19 20 33 34 35 36
elementoVar          : 21 22 23 24
float                : 42
header1              : 10
header2              : 11
hexadecimal          : 45
inf                  : 43
int                  : 27 41
lista                : 57
lista2               : 29 30
lstring              : 50
mlstring             : 51
mstring              : 49
name                 : 12 13 14 15 16 17 18 19 20
name2                : 22 24
nan                  : 44
newline              : 7
object               : 58
octal                : 47
offset_datetime      : 56
program              : 0
statement            : 2 3
statements           : 1 3
string               : 26 48
table                : 4
time                 : 54

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statement
    (3) statements -> . statement statements
    (4) statement -> . table
    (5) statement -> . assignment
    (6) statement -> . comment
    (7) statement -> . newline
    (10) table -> . header1
    (11) table -> . header2
    (18) assignment -> . name EQUAL elemento
    (19) assignment -> . name EQUAL elemento NEWLINE
    (9) comment -> . COMMENT NEWLINE
    (8) newline -> . NEWLINE
    (12) header1 -> . LEFTSQUAREBRACKET name RIGHTSQUAREBRACKET
    (13) header1 -> . LEFTSQUAREBRACKET name RIGHTSQUAREBRACKET NEWLINE
    (14) header1 -> . LEFTSQUAREBRACKET name RIGHTSQUAREBRACKET COMMENT NEWLINE
    (15) header2 -> . LEFTSQUAREBRACKET LEFTSQUAREBRACKET name RIGHTSQUAREBRACKET RIGHTSQUAREBRACKET
    (16) header2 -> . LEFTSQUAREBRACKET LEFTSQUAREBRACKET name RIGHTSQUAREBRACKET RIGHTSQUAREBRACKET NEWLINE
    (17) header2 -> . LEFTSQUAREBRACKET LEFTSQUAREBRACKET name RIGHTSQUAREBRACKET RIGHTSQUAREBRACKET COMMENT NEWLINE
    (21) name -> . elementoVar
    (22) name -> . elementoVar name2
    (25) elementoVar -> . VAR
    (26) elementoVar -> . string
    (27) elementoVar -> . int
    (61) string -> . STRING
    (63) int -> . INT

    COMMENT         shift and go to state 12
    NEWLINE         shift and go to state 11
    LEFTSQUAREBRACKET shift and go to state 13
    VAR             shift and go to state 15
    STRING          shift and go to state 18
    INT             shift and go to state 19

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    table                          shift and go to state 4
    assignment                     shift and go to state 5
    comment                        shift and go to state 6
    newline                        shift and go to state 7
    header1                        shift and go to state 8
    header2                        shift and go to state 9
    name                           shift and go to state 10
    elementoVar                    shift and go to state 14
    string                         shift and go to state 16
    int                            shift and go to state 17

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .

    $end            reduce using rule 1 (program -> statements .)


state 3

    (2) statements -> statement .
    (3) statements -> statement . statements
    (2) statements -> . statement
    (3) statements -> . statement statements
    (4) statement -> . table
    (5) statement -> . assignment
    (6) statement -> . comment
    (7) statement -> . newline
    (10) table -> . header1
    (11) table -> . header2
    (18) assignment -> . name EQUAL elemento
    (19) assignment -> . name EQUAL elemento NEWLINE
    (9) comment -> . COMMENT NEWLINE
    (8) newline -> . NEWLINE
    (12) header1 -> . LEFTSQUAREBRACKET name RIGHTSQUAREBRACKET
    (13) header1 -> . LEFTSQUAREBRACKET name RIGHTSQUAREBRACKET NEWLINE
    (14) header1 -> . LEFTSQUAREBRACKET name RIGHTSQUAREBRACKET COMMENT NEWLINE
    (15) header2 -> . LEFTSQUAREBRACKET LEFTSQUAREBRACKET name RIGHTSQUAREBRACKET RIGHTSQUAREBRACKET
    (16) header2 -> . LEFTSQUAREBRACKET LEFTSQUAREBRACKET name RIGHTSQUAREBRACKET RIGHTSQUAREBRACKET NEWLINE
    (17) header2 -> . LEFTSQUAREBRACKET LEFTSQUAREBRACKET name RIGHTSQUAREBRACKET RIGHTSQUAREBRACKET COMMENT NEWLINE
    (21) name -> . elementoVar
    (22) name -> . elementoVar name2
    (25) elementoVar -> . VAR
    (26) elementoVar -> . string
    (27) elementoVar -> . int
    (61) string -> . STRING
    (63) int -> . INT

    $end            reduce using rule 2 (statements -> statement .)
    COMMENT         shift and go to state 12
    NEWLINE         shift and go to state 11
    LEFTSQUAREBRACKET shift and go to state 13
    VAR             shift and go to state 15
    STRING          shift and go to state 18
    INT             shift and go to state 19

    statement                      shift and go to state 3
    statements                     shift and go to state 20
    table                          shift and go to state 4
    assignment                     shift and go to state 5
    comment                        shift and go to state 6
    newline                        shift and go to state 7
    header1                        shift and go to state 8
    header2                        shift and go to state 9
    name                           shift and go to state 10
    elementoVar                    shift and go to state 14
    string                         shift and go to state 16
    int                            shift and go to state 17

state 4

    (4) statement -> table .

    COMMENT         reduce using rule 4 (statement -> table .)
    NEWLINE         reduce using rule 4 (statement -> table .)
    LEFTSQUAREBRACKET reduce using rule 4 (statement -> table .)
    VAR             reduce using rule 4 (statement -> table .)
    STRING          reduce using rule 4 (statement -> table .)
    INT             reduce using rule 4 (statement -> table .)
    $end            reduce using rule 4 (statement -> table .)


state 5

    (5) statement -> assignment .

    COMMENT         reduce using rule 5 (statement -> assignment .)
    NEWLINE         reduce using rule 5 (statement -> assignment .)
    LEFTSQUAREBRACKET reduce using rule 5 (statement -> assignment .)
    VAR             reduce using rule 5 (statement -> assignment .)
    STRING          reduce using rule 5 (statement -> assignment .)
    INT             reduce using rule 5 (statement -> assignment .)
    $end            reduce using rule 5 (statement -> assignment .)


state 6

    (6) statement -> comment .

    COMMENT         reduce using rule 6 (statement -> comment .)
    NEWLINE         reduce using rule 6 (statement -> comment .)
    LEFTSQUAREBRACKET reduce using rule 6 (statement -> comment .)
    VAR             reduce using rule 6 (statement -> comment .)
    STRING          reduce using rule 6 (statement -> comment .)
    INT             reduce using rule 6 (statement -> comment .)
    $end            reduce using rule 6 (statement -> comment .)


state 7

    (7) statement -> newline .

    COMMENT         reduce using rule 7 (statement -> newline .)
    NEWLINE         reduce using rule 7 (statement -> newline .)
    LEFTSQUAREBRACKET reduce using rule 7 (statement -> newline .)
    VAR             reduce using rule 7 (statement -> newline .)
    STRING          reduce using rule 7 (statement -> newline .)
    INT             reduce using rule 7 (statement -> newline .)
    $end            reduce using rule 7 (statement -> newline .)


state 8

    (10) table -> header1 .

    COMMENT         reduce using rule 10 (table -> header1 .)
    NEWLINE         reduce using rule 10 (table -> header1 .)
    LEFTSQUAREBRACKET reduce using rule 10 (table -> header1 .)
    VAR             reduce using rule 10 (table -> header1 .)
    STRING          reduce using rule 10 (table -> header1 .)
    INT             reduce using rule 10 (table -> header1 .)
    $end            reduce using rule 10 (table -> header1 .)


state 9

    (11) table -> header2 .

    COMMENT         reduce using rule 11 (table -> header2 .)
    NEWLINE         reduce using rule 11 (table -> header2 .)
    LEFTSQUAREBRACKET reduce using rule 11 (table -> header2 .)
    VAR             reduce using rule 11 (table -> header2 .)
    STRING          reduce using rule 11 (table -> header2 .)
    INT             reduce using rule 11 (table -> header2 .)
    $end            reduce using rule 11 (table -> header2 .)


state 10

    (18) assignment -> name . EQUAL elemento
    (19) assignment -> name . EQUAL elemento NEWLINE

    EQUAL           shift and go to state 21


state 11

    (8) newline -> NEWLINE .

    COMMENT         reduce using rule 8 (newline -> NEWLINE .)
    NEWLINE         reduce using rule 8 (newline -> NEWLINE .)
    LEFTSQUAREBRACKET reduce using rule 8 (newline -> NEWLINE .)
    VAR             reduce using rule 8 (newline -> NEWLINE .)
    STRING          reduce using rule 8 (newline -> NEWLINE .)
    INT             reduce using rule 8 (newline -> NEWLINE .)
    $end            reduce using rule 8 (newline -> NEWLINE .)


state 12

    (9) comment -> COMMENT . NEWLINE

    NEWLINE         shift and go to state 22


state 13

    (12) header1 -> LEFTSQUAREBRACKET . name RIGHTSQUAREBRACKET
    (13) header1 -> LEFTSQUAREBRACKET . name RIGHTSQUAREBRACKET NEWLINE
    (14) header1 -> LEFTSQUAREBRACKET . name RIGHTSQUAREBRACKET COMMENT NEWLINE
    (15) header2 -> LEFTSQUAREBRACKET . LEFTSQUAREBRACKET name RIGHTSQUAREBRACKET RIGHTSQUAREBRACKET
    (16) header2 -> LEFTSQUAREBRACKET . LEFTSQUAREBRACKET name RIGHTSQUAREBRACKET RIGHTSQUAREBRACKET NEWLINE
    (17) header2 -> LEFTSQUAREBRACKET . LEFTSQUAREBRACKET name RIGHTSQUAREBRACKET RIGHTSQUAREBRACKET COMMENT NEWLINE
    (21) name -> . elementoVar
    (22) name -> . elementoVar name2
    (25) elementoVar -> . VAR
    (26) elementoVar -> . string
    (27) elementoVar -> . int
    (61) string -> . STRING
    (63) int -> . INT

    LEFTSQUAREBRACKET shift and go to state 23
    VAR             shift and go to state 15
    STRING          shift and go to state 18
    INT             shift and go to state 19

    name                           shift and go to state 24
    elementoVar                    shift and go to state 14
    string                         shift and go to state 16
    int                            shift and go to state 17

state 14

    (21) name -> elementoVar .
    (22) name -> elementoVar . name2
    (23) name2 -> . DOT elementoVar
    (24) name2 -> . DOT elementoVar name2

    EQUAL           reduce using rule 21 (name -> elementoVar .)
    RIGHTSQUAREBRACKET reduce using rule 21 (name -> elementoVar .)
    DOT             shift and go to state 26

    name2                          shift and go to state 25

state 15

    (25) elementoVar -> VAR .

    DOT             reduce using rule 25 (elementoVar -> VAR .)
    EQUAL           reduce using rule 25 (elementoVar -> VAR .)
    RIGHTSQUAREBRACKET reduce using rule 25 (elementoVar -> VAR .)


state 16

    (26) elementoVar -> string .

    DOT             reduce using rule 26 (elementoVar -> string .)
    EQUAL           reduce using rule 26 (elementoVar -> string .)
    RIGHTSQUAREBRACKET reduce using rule 26 (elementoVar -> string .)


state 17

    (27) elementoVar -> int .

    DOT             reduce using rule 27 (elementoVar -> int .)
    EQUAL           reduce using rule 27 (elementoVar -> int .)
    RIGHTSQUAREBRACKET reduce using rule 27 (elementoVar -> int .)


state 18

    (61) string -> STRING .

    DOT             reduce using rule 61 (string -> STRING .)
    EQUAL           reduce using rule 61 (string -> STRING .)
    RIGHTSQUAREBRACKET reduce using rule 61 (string -> STRING .)
    NEWLINE         reduce using rule 61 (string -> STRING .)
    COMMENT         reduce using rule 61 (string -> STRING .)
    LEFTSQUAREBRACKET reduce using rule 61 (string -> STRING .)
    VAR             reduce using rule 61 (string -> STRING .)
    STRING          reduce using rule 61 (string -> STRING .)
    INT             reduce using rule 61 (string -> STRING .)
    $end            reduce using rule 61 (string -> STRING .)
    COMMA           reduce using rule 61 (string -> STRING .)
    RIGHTBRACKET    reduce using rule 61 (string -> STRING .)


state 19

    (63) int -> INT .

    DOT             reduce using rule 63 (int -> INT .)
    EQUAL           reduce using rule 63 (int -> INT .)
    RIGHTSQUAREBRACKET reduce using rule 63 (int -> INT .)
    NEWLINE         reduce using rule 63 (int -> INT .)
    COMMENT         reduce using rule 63 (int -> INT .)
    LEFTSQUAREBRACKET reduce using rule 63 (int -> INT .)
    VAR             reduce using rule 63 (int -> INT .)
    STRING          reduce using rule 63 (int -> INT .)
    INT             reduce using rule 63 (int -> INT .)
    $end            reduce using rule 63 (int -> INT .)
    COMMA           reduce using rule 63 (int -> INT .)
    RIGHTBRACKET    reduce using rule 63 (int -> INT .)


state 20

    (3) statements -> statement statements .

    $end            reduce using rule 3 (statements -> statement statements .)


state 21

    (18) assignment -> name EQUAL . elemento
    (19) assignment -> name EQUAL . elemento NEWLINE
    (41) elemento -> . int
    (42) elemento -> . float
    (43) elemento -> . inf
    (44) elemento -> . nan
    (45) elemento -> . hexadecimal
    (46) elemento -> . binary
    (47) elemento -> . octal
    (48) elemento -> . string
    (49) elemento -> . mstring
    (50) elemento -> . lstring
    (51) elemento -> . mlstring
    (52) elemento -> . boolean
    (53) elemento -> . date
    (54) elemento -> . time
    (55) elemento -> . datetime
    (56) elemento -> . offset_datetime
    (57) elemento -> . lista
    (58) elemento -> . object
    (63) int -> . INT
    (64) float -> . FLOAT
    (65) inf -> . INF
    (66) nan -> . NAN
    (67) hexadecimal -> . HEXADECIMAL
    (68) binary -> . BINARY
    (69) octal -> . OCTAL
    (61) string -> . STRING
    (59) mstring -> . MSTRING
    (62) lstring -> . LITERALSTRING
    (60) mlstring -> . MLSTRING
    (70) boolean -> . BOOLEAN
    (71) date -> . DATE
    (72) time -> . TIME
    (73) datetime -> . DATETIME
    (74) offset_datetime -> . OFFSETDATETIME
    (28) lista -> . LEFTSQUAREBRACKET RIGHTSQUAREBRACKET
    (29) lista -> . LEFTSQUAREBRACKET NEWLINE lista2 RIGHTSQUAREBRACKET
    (30) lista -> . LEFTSQUAREBRACKET lista2 RIGHTSQUAREBRACKET
    (37) object -> . LEFTBRACKET RIGHTBRACKET
    (38) object -> . LEFTBRACKET conteudo_object RIGHTBRACKET

    INT             shift and go to state 19
    FLOAT           shift and go to state 46
    INF             shift and go to state 47
    NAN             shift and go to state 48
    HEXADECIMAL     shift and go to state 49
    BINARY          shift and go to state 50
    OCTAL           shift and go to state 51
    STRING          shift and go to state 18
    MSTRING         shift and go to state 52
    LITERALSTRING   shift and go to state 53
    MLSTRING        shift and go to state 54
    BOOLEAN         shift and go to state 55
    DATE            shift and go to state 56
    TIME            shift and go to state 57
    DATETIME        shift and go to state 58
    OFFSETDATETIME  shift and go to state 59
    LEFTSQUAREBRACKET shift and go to state 60
    LEFTBRACKET     shift and go to state 61

    elemento                       shift and go to state 27
    int                            shift and go to state 28
    float                          shift and go to state 29
    inf                            shift and go to state 30
    nan                            shift and go to state 31
    hexadecimal                    shift and go to state 32
    binary                         shift and go to state 33
    octal                          shift and go to state 34
    string                         shift and go to state 35
    mstring                        shift and go to state 36
    lstring                        shift and go to state 37
    mlstring                       shift and go to state 38
    boolean                        shift and go to state 39
    date                           shift and go to state 40
    time                           shift and go to state 41
    datetime                       shift and go to state 42
    offset_datetime                shift and go to state 43
    lista                          shift and go to state 44
    object                         shift and go to state 45

state 22

    (9) comment -> COMMENT NEWLINE .

    COMMENT         reduce using rule 9 (comment -> COMMENT NEWLINE .)
    NEWLINE         reduce using rule 9 (comment -> COMMENT NEWLINE .)
    LEFTSQUAREBRACKET reduce using rule 9 (comment -> COMMENT NEWLINE .)
    VAR             reduce using rule 9 (comment -> COMMENT NEWLINE .)
    STRING          reduce using rule 9 (comment -> COMMENT NEWLINE .)
    INT             reduce using rule 9 (comment -> COMMENT NEWLINE .)
    $end            reduce using rule 9 (comment -> COMMENT NEWLINE .)


state 23

    (15) header2 -> LEFTSQUAREBRACKET LEFTSQUAREBRACKET . name RIGHTSQUAREBRACKET RIGHTSQUAREBRACKET
    (16) header2 -> LEFTSQUAREBRACKET LEFTSQUAREBRACKET . name RIGHTSQUAREBRACKET RIGHTSQUAREBRACKET NEWLINE
    (17) header2 -> LEFTSQUAREBRACKET LEFTSQUAREBRACKET . name RIGHTSQUAREBRACKET RIGHTSQUAREBRACKET COMMENT NEWLINE
    (21) name -> . elementoVar
    (22) name -> . elementoVar name2
    (25) elementoVar -> . VAR
    (26) elementoVar -> . string
    (27) elementoVar -> . int
    (61) string -> . STRING
    (63) int -> . INT

    VAR             shift and go to state 15
    STRING          shift and go to state 18
    INT             shift and go to state 19

    name                           shift and go to state 62
    elementoVar                    shift and go to state 14
    string                         shift and go to state 16
    int                            shift and go to state 17

state 24

    (12) header1 -> LEFTSQUAREBRACKET name . RIGHTSQUAREBRACKET
    (13) header1 -> LEFTSQUAREBRACKET name . RIGHTSQUAREBRACKET NEWLINE
    (14) header1 -> LEFTSQUAREBRACKET name . RIGHTSQUAREBRACKET COMMENT NEWLINE

    RIGHTSQUAREBRACKET shift and go to state 63


state 25

    (22) name -> elementoVar name2 .

    EQUAL           reduce using rule 22 (name -> elementoVar name2 .)
    RIGHTSQUAREBRACKET reduce using rule 22 (name -> elementoVar name2 .)


state 26

    (23) name2 -> DOT . elementoVar
    (24) name2 -> DOT . elementoVar name2
    (25) elementoVar -> . VAR
    (26) elementoVar -> . string
    (27) elementoVar -> . int
    (61) string -> . STRING
    (63) int -> . INT

    VAR             shift and go to state 15
    STRING          shift and go to state 18
    INT             shift and go to state 19

    elementoVar                    shift and go to state 64
    string                         shift and go to state 16
    int                            shift and go to state 17

state 27

    (18) assignment -> name EQUAL elemento .
    (19) assignment -> name EQUAL elemento . NEWLINE

  ! shift/reduce conflict for NEWLINE resolved as shift
    COMMENT         reduce using rule 18 (assignment -> name EQUAL elemento .)
    LEFTSQUAREBRACKET reduce using rule 18 (assignment -> name EQUAL elemento .)
    VAR             reduce using rule 18 (assignment -> name EQUAL elemento .)
    STRING          reduce using rule 18 (assignment -> name EQUAL elemento .)
    INT             reduce using rule 18 (assignment -> name EQUAL elemento .)
    $end            reduce using rule 18 (assignment -> name EQUAL elemento .)
    NEWLINE         shift and go to state 65

  ! NEWLINE         [ reduce using rule 18 (assignment -> name EQUAL elemento .) ]


state 28

    (41) elemento -> int .

    NEWLINE         reduce using rule 41 (elemento -> int .)
    COMMENT         reduce using rule 41 (elemento -> int .)
    LEFTSQUAREBRACKET reduce using rule 41 (elemento -> int .)
    VAR             reduce using rule 41 (elemento -> int .)
    STRING          reduce using rule 41 (elemento -> int .)
    INT             reduce using rule 41 (elemento -> int .)
    $end            reduce using rule 41 (elemento -> int .)
    COMMA           reduce using rule 41 (elemento -> int .)
    RIGHTSQUAREBRACKET reduce using rule 41 (elemento -> int .)
    RIGHTBRACKET    reduce using rule 41 (elemento -> int .)


state 29

    (42) elemento -> float .
